3scale_k8s/backend/backend-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  creationTimestamp: null
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
    threescale_component_element: cron
  name: backend-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: backend-cron
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
#      intervalSeconds: 1
#      timeoutSeconds: 1200
#      updatePeriodSeconds: 1
    type: RollingUpdate
  template:
    metadata:
#      creationTimestamp: null
      labels:
        app: ${APP_LABEL}
        deployment: backend-cron
        threescale_component: backend
        threescale_component_element: cron
    spec:
      containers:
      - args:
        - backend-cron
        image: amp-backend:latest
        imagePullPolicy: IfNotPresent
        name: backend-cron
        resources: {}
      serviceAccountName: amp
