3scale_k8s/backend/backend-listener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  creationTimestamp: null
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
    threescale_component_element: listener
  name: backend-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: backend-listener
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
#      intervalSeconds: 1
#      timeoutSeconds: 600
#      updatePeriodSeconds: 1
    type: RollingUpdate
  template:
    metadata:
#      creationTimestamp: null
      labels:
        app: ${APP_LABEL}
        deployment: backend-listener
        threescale_component: backend
        threescale_component_element: listener
    spec:
      containers:
      - args:
        - bin/3scale_backend
        - start
        - -e
        - production
        - -p
        - "3000"
        - -x
        - /dev/stdout
        image: amp-backend:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          tcpSocket:
            port: 3000
        name: backend-listener
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /status
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 5
        resources: {}
      serviceAccountName: amp
