3scale_k8s/backend/backend-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  creationTimestamp: null
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
    threescale_component_element: worker
  name: backend-worker
spec:
  replicas: 1
  selector:
    deployment: backend-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
#      intervalSeconds: 1
#      timeoutSeconds: 1200
#      updatePeriodSeconds: 1
    type: RollingUpdate
  template:
    metadata:
#      creationTimestamp: null
      labels:
        app: ${APP_LABEL}
        deployment: backend-worker
        threescale_component: backend
        threescale_component_element: worker
    spec:
      containers:
      - args:
        - bin/3scale_backend_worker
        - run
        image: amp-backend:latest
        imagePullPolicy: IfNotPresent
        name: backend-worker
        resources: {}
      serviceAccountName: amp
