3scale_k8s/backend/backend-listener-service.yaml
apiVersion: v1
kind: Service
metadata:
#    creationTimestamp: null
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
    threescale_component_element: listener
  name: backend-listener
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: backend-listener
#status:
#  loadBalancer: {}
