3scale_k8s/backend/backend-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
#  creationTimestamp: null
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
    threescale_component_element: redis
  name: backend-redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    deployment: backend-redis
#status:
#  loadBalancer: {}
