3scale_k8s/backend/backend-route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: ${APP_LABEL}
    threescale_component: backend
  name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backend-${TENANT_NAME}.${WILDCARD_DOMAIN}
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: backend-listener
          servicePort: 80




#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  creationTimestamp: null
#  labels:
#    app: ${APP_LABEL}
#    threescale_component: backend
#  name: backend
#spec:
#  host: backend-${TENANT_NAME}.${WILDCARD_DOMAIN}
#  port:
#    targetPort: http
#  tls:
#    insecureEdgeTerminationPolicy: Allow
#    termination: edge
#  to:
#    kind: Service
#    name: backend-listener
#    weight: null
#status:
#  ingress: null
